--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "autoprefixer": "^9.6.1",
     "bootstrap": "^4.3.1",
     "glob": "^7.1.4",
