--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.4.2",
+    "react-router-dom": "4.2.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
     "react-hot": "0.0.1",
