--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "react-scripts": "3.0.0",
     "react-scroll-to-bottom": "^1.3.2",
     "react-swipeable-views": "^0.13.3",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "highcharts": "^7.2.0",
+    "highcharts-exporting": "^0.1.7",
+    "highcharts-more": "^0.1.7",
+    "highcharts-react-official": "^2.2.2",
+    "react-highcharts": "^16.1.0",
+    "react-jsx-highcharts": "^3.6.1"
   },
   "scripts": {
     "start": "npm install && node server.js",
