--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "3.0.0",
     "react-scroll-to-bottom": "^1.3.2",
     "react-swipeable-views": "^0.13.3",
+    "react-voice-input": "0.0.4",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
